revise comparison mode styling for minor alignment fixes by adding flexbox, safari still needs reset of some sort as it the comparison button has extra width

--- a/web/css/button.css
+++ b/web/css/button.css
@@ -15,7 +15,7 @@
   padding: 0;
 }
 .wv-button span {
-  padding: 6px 13px 7px;
+  padding: 6px 16px 7px;
   display: block;
 }
 .wv-button.red {
